fix: banner image overflowing the body

--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -9,6 +9,7 @@
 
 .picture {
   background: #36231C;
+  overflow: hidden;
   position: relative;
   width: 100%;
   height: 150px;
